--- a/src/stylesheets/ProfilePage.css
+++ b/src/stylesheets/ProfilePage.css
@@ -52,11 +52,33 @@
   background: rgb(60, 60, 60);
   width: 100%;
   height: 100%;
+  object-fit: cover;
+
   border-radius: 50%;
   border-width: .5em;
   border-style: solid;
   border-color: rgb(80,80,80);
   transition: border-width .5s, border-color .5s;
+}
+
+.profile-holder{
+  z-index: 2;
+  margin-top: 20em;
+  width: 12em;
+  height: 12em;
+  border-radius: 50%;
+  transition: border-width .5s, border-style .5s;
+}
+
+#profile-img1{
+  background: rgb(60, 60, 60);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border-width: .5em;
+  border-style: solid;
+  border-color: rgb(80,80,80);
 }
 
 #profile-img img:hover{
@@ -74,12 +96,20 @@
 #banner-img img{
   width: 100%;
   height: 100%;
+  object-fit: cover;
   z-index: 0;
   transition: border-width .5s, border-color .5s;
 }
 
+#banner1-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
 
 .profile-stats {
+  /* background: rgb(255, 0, 255); */
   display: flex;
   justify-content: space-between;
   width: 30em;
@@ -164,6 +194,7 @@
 }
 
 .video-thumbnail{
+  object-fit: cover;
   width: 100%;
   height: 13em;
   border-radius: .1em;
