--- a/src/stylesheets/SearchPage.css
+++ b/src/stylesheets/SearchPage.css
@@ -80,14 +80,13 @@
 .video-card-result{
   margin-top: 1em;
   width: 100%;
-  height: 100%;
+  /* height: 30%; */
   margin-right: 2em;
   margin-bottom: 1em;
   border-radius: .5em;
   padding: .5em;
   transition: background-color .4s;
   display: flex;
-
 }
 
 .video-card-result:hover {
@@ -97,6 +96,7 @@
 .video-title{
   text-align: left;
   padding-left: .5em;
+  font-size: 1.2em;
   color: rgb(255, 255, 255);
 }
 
@@ -112,6 +112,7 @@
 }
 
 .video-thumbnails{
+  object-fit: cover;
   width: 25em;
   height: 15em;
   border-radius: .1em;
