--- a/src/stylesheets/VideoForm.css
+++ b/src/stylesheets/VideoForm.css
@@ -9,9 +9,6 @@
   height: 30%;
   margin: auto;
   margin-top: 7%;
-  /* transform: translateY(-50%); */
-  /* margin-top: 50%; */
-
 }
 
 .form-content{
@@ -55,21 +52,55 @@
   margin-bottom: 4em;
 }
 .form-input-fields{
-  width: 28em;
+  width: 30em;
 }
+
 
 .form-content img{
   background-color: rgba(0, 0, 0, .3);
   border-radius: .5em;
-  width: 27em;
+  width: 30em;
   height: 17em;
+  object-fit: cover;
+}
+
+.preview-video{
+  display: flex;
+  justify-content: flex-end;
+  font-size: 1.1em;
+}
+
+.preview-video span{
+  transition: color .3s;
+}
+
+.preview-video span:hover{
+  color: rgb(190, 190, 190);
+  cursor: default;
+}
+
+.preview-vid-holder{
+  padding: 3em;
+}
+
+.preview-video1{
+  display: flex;
+  justify-content: flex-start;
+  font-size: 1.1em;
+}
+
+.preview-video1 span{
+  transition: color .3s;
+}
+
+.preview-video1 span:hover{
+  color: rgb(190, 190, 190);
+  cursor: default;
 }
 
 .buttons {
   display: flex;
   justify-content: flex-end;
-  /* background-color: rgb(255, 255, 0) */
-  /* margin-bottom: 5em; */
 }
 
 .buttons #submit, .buttons #cancel{
@@ -98,7 +129,7 @@
 #description{
   resize: none;
   width: 100%;
-  height: 9em;
+  height: 10em;
   text-align: left;
   border-radius: 2em;
   border-style: solid;
